--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "framer-motion": "^12.23.25",
     "html-react-parser": "^5.2.10",
     "lucide-react": "^0.555.0",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-responsive-masonry": "^2.7.1",
     "react-router-dom": "^7.10.1",
     "react-toastify": "^11.0.5"
   },
